# justbases

./: .gitignore  .isort.cfg  .travis.yml  CHANGES.txt  MANIFEST.in  Makefile  README.md  README.rst  check.py  setup.cfg  setup.py  tox.ini
.github/workflows/: .main.yml.swp  main.yml  weekly.yml
doc/: Makefile  conf.py  index.rst  usage.rst
src/justbases/: __init__.py  _approx_display.py  _config.py  _constants.py  _display.py  _division.py  _errors.py  _nats.py  _radix.py  _rationals.py  _rounding.py  version.py
tests/: __init__.py  _utils.py  display_test.py  test_approx_display.py  test_constants.py  test_display.py  test_division.py  test_nats.py  test_radix.py  test_rationals.py  test_rounding.py
tests/test_deterministic/: test_constants.py  test_display.py  test_division.py  test_nats.py  test_radix.py  test_rationals.py
tests/test_hypothesis/: __init__.py  _utils.py  test_display.py  test_division.py  test_nats.py  test_radix.py  test_rationals.py
