[metadata]
name = justbases
author = Anne Mulhern
author_email = amulhern@redhat.com
url = https://github.com/mulkieran/justbases
description = "conversion of ints and rationals to any base"
license = LGPL-2.1-or-later
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: justbases.version.__version__
platforms =
  Linux
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development :: Libraries
  Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
  =src

packages =
  justbases
